<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#063A68"
    tools:context=".Registro_Activity">

    <TextView
        android:id="@+id/ACTIVIDADES"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="7dp"
        android:layout_marginTop="27dp"
        android:layout_marginRight="7dp"
        android:layout_marginBottom="712dp"
        android:text="@string/actividades"
        android:textAlignment="center"
        android:textColor="@android:color/background_light"
        android:textColorHint="@color/ic_launcher_background"
        android:verticalScrollbarPosition="left"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.117" />

    <EditText
        android:id="@+id/et_cedula"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="11dp"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="11dp"
        android:autofillHints=""
        android:backgroundTint="#FFFFFF"
        android:ems="10"
        android:hint="@string/et_cedula"
        android:inputType="textPersonName"
        android:textColor="@android:color/background_light"
        android:textColorHint="@android:color/background_light"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_nombre" />

    <EditText
        android:id="@+id/et_nombre"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="11dp"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="11dp"
        android:backgroundTint="#FFFFFF"
        android:ems="10"
        android:fallbackLineSpacing="true"
        android:hapticFeedbackEnabled="true"
        android:hint="@string/et_nombre"
        android:inputType="textPersonName"
        android:outlineAmbientShadowColor="#FFFFFF"
        android:outlineProvider="none"
        android:outlineSpotShadowColor="#FFFFFF"
        android:shadowColor="#FFFFFF"
        android:textColor="#FFFFFF"
        android:textColorHighlight="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:textColorLink="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ACTIVIDADES"
        tools:ignore="Autofill"
        tools:visibility="visible" />

    <EditText
        android:id="@+id/et_correo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="11dp"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="11dp"
        android:backgroundTint="#FFFFFF"
        android:ems="10"
        android:hint="@string/et_correo"
        android:inputType="textEmailAddress"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_cedula"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="11dp"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="11dp"
        android:backgroundTint="#FFFFFF"
        android:ems="10"
        android:hint="@string/et_password"
        android:inputType="textPassword"
        android:textColorHint="@android:color/background_light"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_correo"
        android:autofillHints="" />

    <EditText
        android:id="@+id/et_confirma_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="11dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="11dp"
        android:autofillHints=""
        android:backgroundTint="#FFFFFF"
        android:ems="10"
        android:hint="@string/et_confirma_password"
        android:inputType="textPassword"
        android:textColorHint="@android:color/background_light"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_password" />

    <Button
        android:id="@+id/bt_aceptar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="3dp"
        android:layout_marginTop="84dp"
        android:layout_marginEnd="3dp"
        android:text="@string/bt_aceptar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.451"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_confirma_password" />

    <TextView
        android:id="@+id/tv_resumen"
        android:layout_width="325dp"
        android:layout_height="67dp"
        android:layout_marginStart="11dp"
        android:layout_marginTop="84dp"
        android:layout_marginEnd="11dp"
        android:text="@string/tv_resumen"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bt_aceptar" />

    <LinearLayout
        android:layout_width="379dp"
        android:layout_height="51dp"
        android:layout_marginStart="11dp"
        android:layout_marginTop="7dp"
        android:layout_marginEnd="13dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_confirma_password">

        <TextView
            android:id="@+id/tv_fecha_nacimiento"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/tv_fecha_nacimiento"
            android:textAlignment="center"
            android:textColor="#FAF9F9"
            android:textSize="18sp"
            android:verticalScrollbarPosition="left" />

        <ImageButton
            android:id="@+id/ib_calendario"
            android:layout_width="23dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:contentDescription="@string/todo"
            app:srcCompat="@android:drawable/ic_menu_my_calendar" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>